2012-04-07  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* matlab/FileFormatToolbox/scinrrd_load.m (v0.2.8):

	- Fix bug. Reading of .mha files with LOCAL binary data was
	starting at the wrong place (at the beginning of the LOCAL line,
	rather than after it).

	* matlab/FileFormatToolbox/writemetaimagefile.m (v0.1.4):

	- Enable writing of 2D images.

2012-03-30  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* matlab/ItkToolbox/CMakeLists.txt (v0.4.4):
	* Add
	matlab/ItkToolbox/MexMultiScaleHessianSmoothed3DToVesselnessMeasureImageFilter.hpp (v0.1.0):
	* Add
	matlab/ItkToolbox/MexMultiScaleHessianSmoothed3DToVesselnessMeasureImageFilter.cpp (v0.1.0):
	* matlab/itk_imfilter.m (v0.4.7):
	* matlab/ItkToolbox/ItkImFilter.cpp (v0.6.6):

	- Add filter
	itk::MultiScaleHessianSmoothed3DToVesselnessMeasureImageFilter.

	* matlab/ItkToolbox/add_filter_template.sh (v0.1.2):

	- Fix bug. Rev and Date seach patterns in sed expression were too
	specific.

2012-03-29  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* matlab/ItkToolbox/ItkImFilter.cpp (v0.6.5):
	* matlab/itk_imfilter.m (v0.4.6):
	* matlab/ItkToolbox/MexAnisotropicDiffusionVesselEnhancementImageFilter.cpp
	(v0.2.0):
	* cpp/src/third-party/IJ-Vessel_Enhancement_Diffusion.1/itkAnisotropicDiffusionVesselEnhancementImageFilter.h
	(v0.3.0):
	* cpp/src/third-party/IJ-Vessel_Enhancement_Diffusion.1/itkAnisotropicDiffusionVesselEnhancementImageFilter.txx
	(v0.3.0):
	* cpp/src/third-party/IJ-Vessel_Enhancement_Diffusion.1/itkMultiScaleHessianSmoothed3DToVesselnessMeasureImageFilter.h
	(v0.2.0):
	* cpp/src/third-party/IJ-Vessel_Enhancement_Diffusion.1/itkMultiScaleHessianSmoothed3DToVesselnessMeasureImageFilter.txx
	(v0.2.0):

	- Add linear scales besides logarithmic scales. It seems that for
	small ranges of sigma values, a linear scale covers the range
	better than a logarithmic scale.

2012-03-28  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* matlab/ItkToolbox/MexAnisotropicDiffusionVesselEnhancementImageFilter.cpp
	(v0.1.3):
